tests/positive/test-success-concatstr.rooc
// Test concat_str with 2 simple strings
fun main() -> int {
    concat_str("hello ", "world");
    println();
    concat_str("   ", "--- +++ ///");
    return 0;
}

