tests/negative/test-fail-call2.rooc
//function params type mismatch
fun add(a: int, b: int) -> int {
    return a + b;
}

fun main() -> int {
    print_int(add(2, 3.0));
    return 0;
}